# tasca

./: TM_coches_motos  pyproject.toml
models/: dt.pck  knn.pck  lr.pck  svm.pck
notebooks/: classificacio.ipynb  client.ipynb  prova.ipynb
tasca/: servei.py
tests/: prova_pandas.py
