[tool.poetry]
name = "tasca"
version = "0.1.0"
description = ""
authors = ["mpolo <manolo.polo.hoyos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
scikit-learn = "^1.6.0"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
